# dna-frame-translation-plugin

./: README.html  README.md  plugin.yaml  pyproject.toml  requirements.txt  translation_runner.py  translator.py
.github/workflows/: deploy-spa.yml
example/: sample_sequences.fasta
